--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
 <div class="typewriter body">
 
-   <h3>AI has become the latest medium through which colonialism can override diverse design narratives.</br>
-   Instead of overproducing iconography in an already saturated space, AI can speculate the regional.</br>
+   <h3>AI has become the latest medium through which colonialism can override diverse design narratives.</br></h3>
+   <h3>Instead of overproducing iconography in an already saturated space, AI can speculate the regional.</br>
    We will retrain it on a curated archive of cultural fragments which comprises of vernacular artifacts, local material behaviors and a multitude of other fragments.</br>
    AI can fulfill its own true potential by perpetually learning and transforming vernacular knowledge to redefine regional urban formations.</h3>
 
