--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 <div class="typewriter body">
 
-   <h3>AI has become the latest medium through which colonialism can override diverse design narratives.</br>
-   Instead of overproducing iconography in an already saturated space, AI can speculate the regional.</br>
-   We will retrain it on a curated archive of cultural fragments which comprises of vernacular artifacts, local material behaviors and a multitude of other fragments.</br>
+   <h3>AI has become the latest medium through which colonialism can override diverse design narratives.</br></br>
+   Instead of overproducing iconography in an already saturated space, AI can speculate the regional.</br></br>
+   We will retrain it on a curated archive of cultural fragments which comprises of vernacular artifacts, local material behaviors and a multitude of other fragments.</br></br>
    AI can fulfill its own true potential by perpetually learning and transforming vernacular knowledge to redefine regional urban formations.</h3>
 
  </div>
